--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="internal-section">
       <div class="imgcontainer">
         <img
-          src="/imgs/dollar-sign-with-rotating-arrows.png"
+          src="./imgs/dollar-sign-with-rotating-arrows.png"
           alt="arrow dollar"
           class="arrow-dollar"
         />
